syntax = "proto3";

package new_object_builder_service;
option go_package = "genproto/new_object_builder_service";

import "google/protobuf/empty.proto";
import "pg_version.proto";

service VersionHistoryService {
  rpc GatAll(GetAllRquest) returns (ListVersionHistory) {}
  rpc GetByID(VersionHistoryPrimaryKey) returns (VersionHistory) {}
  rpc Update(UsedForEnvRequest) returns (google.protobuf.Empty) {}
  rpc Create(CreateVersionHistoryRequest) returns (google.protobuf.Empty) {}

  rpc CreateFunctionLog(FunctionLogReq) returns (google.protobuf.Empty);
  rpc GetFunctionLogs(GetFunctionLogsReq) returns (GetFunctionLogsResp);
}

message GetFunctionLogsResp {
  repeated FunctionLogModel function_logs = 1;
  int64 total_count = 2;

}

message GetFunctionLogsReq {
  int64 limit = 1;
  int64 offset = 2;
  string project_id = 3;
  string function_id = 4;
  string search = 5;
}

message FunctionLogReq {
  string id = 1;
  string project_id = 2;
  string function_id = 3;
  string table_slug = 4;
  string request_method = 5;
  string action_type = 6;
  string send_at = 7;
  string completed_at = 8;
  int64 duration = 9;
  string compute = 10;
  string db_bandwidth = 11;
  string  file_bandwidth = 12;
  string vector_bandwidth = 13;
  int64 return_size = 14;
}


message FunctionLogModel {
  string id = 1;
  string function_id = 2;
  string function_name = 3;
  string table_slug = 4;
  string request_method = 5;
  string action_type = 6;
  string send_at = 7;
  string completed_at = 8;
  int64 duration = 9;
  string compute = 10;
  string db_bandwidth = 11;
  string  file_bandwidth = 12;
  string vector_bandwidth = 13;
  int64 return_size = 14;
}


message GetAllRquest {
  string project_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  string type = 4;
  string env_id = 5;
  string from_date = 6;
  string to_date = 7;
  string user_info = 8;
  string api_key = 9;
  bool order_by = 10;
  repeated string version_ids = 11;
  string collection = 12;
  string action_type = 13;
}

message VersionHistory {
  string id = 1;
  string action_source = 2;
  string action_type = 3;
  string previus = 4;
  string current = 5;
  map<string, bool> used_envrironments = 6;
  string date = 7;
  string user_info = 8;
  string request = 9;
  string response = 10;
  string api_key = 11;
  string type = 12;
  string table_slug = 13;
  string version_id = 14;
  Version version = 15;
}

message CreateVersionHistoryRequest {
  string id = 1;
  string action_source = 2;
  string action_type = 3;
  string previus = 4;
  string current = 5;
  map<string, bool> used_envrironments = 6;
  string date = 7;
  string user_info = 8;
  string request = 9;
  string project_id = 10;
  string response = 11;
  string api_key = 12;
  string type = 13;
  string table_slug = 14;
  string version_id = 15;
}

message ListVersionHistory {
  repeated VersionHistory histories = 1;
  string project_id = 2;
  int32 count = 3;
}

message UsedForEnvRequest {
  repeated string ids = 1;
  string env_id = 2;
  string project_id = 3;
}

message UserInfo {
  string id = 1;
  string name = 2;
}

message VersionHistoryPrimaryKey {
  string id = 1;
  string project_id = 2;
  string env_id = 3;
}